Working in progress fix kc missile chart on mobile

--- a/korea-chair/north-korean-missile-launches-in-2022-by-missile-type/style.css
+++ b/korea-chair/north-korean-missile-launches-in-2022-by-missile-type/style.css
@@ -347,6 +347,6 @@ p.info:last-of-type {
   font-size: 18px;
 }
 
-.interactive-mobile {
+.hide {
   display: none;
 }
